--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -12,7 +12,7 @@
     "db:start": "pnpm down && docker-compose up -d && pnpm db:migrate",
     "down": "docker-compose down",
     "db:migrate": "pnpm exec prisma migrate dev",
-    "prepare": "rsync --ignore-existing .env.example .env"
+    "prepare": "cp -n .env.example .env"
   },
   "dependencies": {
     "@ethereumjs/util": "^8.0.5",
