--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -7,7 +7,8 @@
     "dev": "cp -n .env.example .env || true && next dev",
     "lint": "next lint",
     "format": "prettier . --write .",
-    "start": "next start"
+    "start": "next start",
+    "test": "echo 'hi'"
   },
   "dependencies": {
     "@ethereumjs/util": "^8.0.5",
